@@ -1,0 +1,46 @@
+# Copyright 2010 Free Software Foundation, Inc.
+
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+if {[skip_shlib_tests]} {
+    return 0
+}
+
+if [get_compiler_info not-used] {
+    return -1
+}
+
+set testfile "infcall-dlopen"
+set srcmainfile ${testfile}.cc
+set srclibfile ${testfile}-lib.cc
+set executable ${testfile}
+set libfile ${objdir}/${subdir}/${executable}.so
+set binfile ${objdir}/${subdir}/${executable}
+
+# Use completely arbitrary file for $libfile source.
+if { [gdb_compile_shlib ${srcdir}/${subdir}/${srclibfile} ${libfile} {debug c++}] != ""
+     || [prepare_for_testing ${testfile}.exp ${executable} ${srcmainfile} {debug c++ shlib_load}] } {
+    return -1
+}
+
+if { ![runto_main] } {
+    return -1
+}
+
+for {set i 0} {$i < 10} {incr i} {
+    gdb_test "p openlib (\"${libfile}\")" " = 1" "test $i"
+    # Try to exploit the GDB trashed memory.
+    gdb_test "b openlib" {Breakpoint [0-9]+ at .*} "test $i stub 1"
+    gdb_test_no_output {delete $bpnum} "test $i stub 2"
+}
